--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsive</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -22,6 +23,7 @@
         </div>
     </header>
     <div class="main-section">
+        <span class="yellow"></span>
         <div class="container">
             <div class="main">
                 <div class="food-bg"></div>
@@ -30,8 +32,52 @@
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <a href="#">Learn more</a>
                 </div>
+                <span class="span-black"></span>
             </div>
-            <div class="coffe-bg"></div>
+            <div class="menu-image">
+                <span class="image-span"></span>
+                <div class="coffe-bg"></div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="learn-cooking">
+        <div class="container">
+            <div class="content">
+                <h1>Learn Cooking Online</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                <span>Image from <a href="#">Freepik</a></span>
+            </div>
+            <div class="cards">
+                <div style="background-color: white;" class="son">
+                    <h2>1</h2>
+                    <h3>Base Meals</h3>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <a>LEARN MORE</a>
+                </div>
+                <div style="background-color: rgba(0, 0, 0, 0.566);" class="son">
+                    <h2 style="color: #fe7606;">2</h2>
+                    <h3 style="color: white;">Knife Skills</h3>
+                    <p style="color: white;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <a>LEARN MORE</a>
+                </div>
+                <div style="background-color: #fe7606;" class="son">
+                    <h2 style="color: white;">3</h2>
+                    <h3 style="color: white;">Cooking Chicken</h3>
+                    <p style="color: white;">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <a style="color: white; border-bottom:2px solid white;">LEARN MORE</a>
+                </div>
+            </div>
+       </div> 
+    </div>
+    <div class="twocolor">
+        <div class="white">
+            <h2>Asian</h2>
+            <p>While it is important to have naturally occurring sugars in your diet, many foods contain harmful added sugars that contain no nutritional value.</p>
+        </div>
+        <div class="orange">
+            <h2>Food</h2>
+            <p>While it is important to have naturally occurring sugars in your diet, many foods contain harmful added sugars that contain no nutritional value.</p>
         </div>
     </div>
 </body>
