--- a/index.html
+++ b/index.html
@@ -80,5 +80,19 @@
             <p>While it is important to have naturally occurring sugars in your diet, many foods contain harmful added sugars that contain no nutritional value.</p>
         </div>
     </div>
+    <div class="imgs">
+        <div class="parent">
+            <img src="./images/1.jpeg"/>
+            <img src="./images/2.jpeg"/>
+            <img src="./images/3.jpeg"/>
+        </div>
+    </div>
+    <div class="burger">
+        <img src="./images/left.jpeg"/>
+        <div class="center">
+            <h2>m f <br/> e i <br/>a s <br/> t h <br/> and</h2>
+        </div>
+        <img src="./images/right"/>
+    </div>
 </body>
 </html>
